      jags.model and coda.samples.
    * New method: pairs for mcmc.list objects. It plots
      bivariate kernel density estimates and scatterplots
      in a matrix with univariate densities as diagonal.
    * dctable add object name even if length(n.clones)==1.
    * initsfun handling in dc.parfit partly allowed,
      this new feature is undocumented and needs testing.

Version 1.3-4, July 9, 2011
    * dc.fit: updating fixed (only updated after 2nd iteration).
    * dc.fit: updatefun and initsfun now accepts 2 arguments,
      1st is model, 2nd is n.clones to allow for cloning
      latent variable vectors on the go. Example reworked accordingly.
    * snowWrapper: cleanup=TRUE cleans up after lib and dir args, too.
    * New option 'overwrite' in dcoptions (used by write.jags.model).
    * packageStartupMessage used in zzz.R .onAttach
    * ... is now passed to snowWrapper in *.parfit (thanks to
      Emmanuel Charpentier for reporting the bug).

Version 1.3-3, May 13, 2011
    * *.parfit: write model to hard drive only if
      cluster type is SOCK (shared memory)
    * snowWrapper: dir=NULL is set as the default.
    * mcmcapply functions simplified, FUN can be missing.
    * jags.parfit help notes that there is no update method
      for parallel mcmc.list objects.
    * snowWrapper got cleanup=TRUE argument to remove
      data after evaluating main function.

Version 1.3-2, March 2, 2011
    * Partial argument match fixed (NOTE from R CMD CHECK).
    * write.jags.model got new argument overwrite=FALSE.
    * Typo in rng.type argument of snowWrapper fixed.
    * plotClusterSize: col arg is reordered according to
      balancing type.

Version 1.3-1, January 4, 2011
    * JASA paper (Lele et al. 2010) citation added to Rd.
    * loading rjags changed: it is now only suggested.
      Reason: some dclone functionality might be useful
      without JAGS/rjags present, and now loading
      rjags won't cause error if JAGS shared library
      not found.